--- a/src/index.html
+++ b/src/index.html
@@ -2,17 +2,15 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
+  <!-- <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles.css"> -->
   <title>this is a test</title>
 </head>
 
 <body>
-  <main>
     <h1>this is a test too</h1>
     <div id="api"></div>
-  </main>
 </body>
 
 </html>
