--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <title>My Product Brand Name</title>
 </head>
 <body>
-  HERE IS A TEST
+  TEST TEST
     <div id="api"></div>
 </body>
 </html>
