--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,11 @@
 <html>
 <head>
     <title>My Product Brand Name</title>
+    <style type="text/css">
+      #usernameverificationpin_but_change_claims {
+        visibility: hidden
+      }
+    </style>
 </head>
 <body>
     <div id="api"></div>
