--- a/src/index.html
+++ b/src/index.html
@@ -24,9 +24,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
 
-    <link href="css/assets.css" rel="stylesheet" type="text/css" />
-    <link href="css/common.css" rel="stylesheet" type="text/css" />
-    <link href="css/unified.css" rel="stylesheet" type="text/css" />
+    <link href="https://delightful-island-0a41bd80f.1.azurestaticapps.net/css/assets.css" rel="stylesheet" type="text/css" />
+    <link href="https://delightful-island-0a41bd80f.1.azurestaticapps.net/css/common.css" rel="stylesheet" type="text/css" />
+    <link href="https://delightful-island-0a41bd80f.1.azurestaticapps.net/css/unified.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
     <div class="container  unified_container ">
@@ -34,7 +34,7 @@
             <div class="col-lg-6">
                 <div class="panel panel-default">
                     <div class="panel-body">
-                        <img alt="Company Logo" class="companyLogo" src='@Url.Content("/images/logo.svg")'>
+                        <img alt="Company Logo" class="companyLogo" src="https://delightful-island-0a41bd80f.1.azurestaticapps.net/images/logo.sgv">
                         <div id="api">
                         </div>
                     </div>
