--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
             <div class="col-lg-6">
                 <div class="panel panel-default">
                     <div class="panel-body">
-                        <img alt="Company Logo" class="companyLogo" src="https://delightful-island-0a41bd80f.1.azurestaticapps.net/images/logo.sgv">
+                        <img alt="Company Logo" class="companyLogo" src="https://delightful-island-0a41bd80f.1.azurestaticapps.net/images/logo.svg">
                         <div id="api">
                         </div>
                     </div>
