--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,7 @@
     <link href="https://delightful-island-0a41bd80f.1.azurestaticapps.net/css/assets.css" rel="stylesheet" type="text/css" />
     <link href="https://delightful-island-0a41bd80f.1.azurestaticapps.net/css/common.css" rel="stylesheet" type="text/css" />
     <link href="https://delightful-island-0a41bd80f.1.azurestaticapps.net/css/unified.css" rel="stylesheet" type="text/css" />
+    <link href="https://delightful-island-0a41bd80f.1.azurestaticapps.net/css/selfasserted.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
     <div class="container  unified_container ">
