--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,12 @@
     <link href="https://delightful-island-0a41bd80f.1.azurestaticapps.net/css/common.css" rel="stylesheet" type="text/css" />
     <link href="https://delightful-island-0a41bd80f.1.azurestaticapps.net/css/unified.css" rel="stylesheet" type="text/css" />
     <link href="https://delightful-island-0a41bd80f.1.azurestaticapps.net/css/selfasserted.css" rel="stylesheet" type="text/css" />
-</head>
+    <style type="text/css">
+      #usernameverificationpin_but_change_claims {
+        visibility: hidden
+      }
+    </style>
+  </head>
 <body>
     <div class="container  unified_container ">
         <div class="row">
