--- a/src/index.html
+++ b/src/index.html
@@ -24,10 +24,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
 
-    <link href="https://delightful-island-0a41bd80f.1.azurestaticapps.net/css/assets.css" rel="stylesheet" type="text/css" />
+    <!-- <link href="https://delightful-island-0a41bd80f.1.azurestaticapps.net/css/assets.css" rel="stylesheet" type="text/css" />
     <link href="https://delightful-island-0a41bd80f.1.azurestaticapps.net/css/unified.css" rel="stylesheet" type="text/css" />
     <link href="https://delightful-island-0a41bd80f.1.azurestaticapps.net/css/common.css" rel="stylesheet" type="text/css" />
-    <link href="https://delightful-island-0a41bd80f.1.azurestaticapps.net/css/selfasserted.css" rel="stylesheet" type="text/css" />
+    <link href="https://delightful-island-0a41bd80f.1.azurestaticapps.net/css/selfasserted.css" rel="stylesheet" type="text/css" /> -->
     <style type="text/css">
       #usernameverificationpin_but_change_claims {
         visibility: hidden
