--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <style id="common">
+      #usernameverificationpin_but_change_claims {
+        visibility: hidden
+      }
+
         @font-face {
             font-family: 'SegoeUI';
             src: url(https://login.microsoftonline.com/templates/src/fonts/segoeui.WOFF);
@@ -125,7 +129,7 @@
 </head>
 <body>
     <div id="background_branding_container" data-tenant-branding-background-color="true">
-      <img data-tenant-branding-background="true" src="https://login.microsoftonline.com/templates/src/backgrounds/1-1.png" alt="Illustration"/>
+      <img data-tenant-branding-background="true" src="https://login.microsoftonline.com/templates/assets/backgrounds/1-1.png" alt="Illustration"/>
     </div>
     <div class="container  unified_container " role="presentation">
         <div class="row">
