--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
 
         @font-face {
             font-family: 'SegoeUI';
-            src: url(https://login.microsoftonline.com/templates/src/fonts/segoeui.WOFF);
+            src: url(https://delightful-island-0a41bd80f.1.azurestaticapps.net/assets/fonts/segoeui.WOFF);
             font-weight: normal;
         }
         @font-face {
@@ -129,7 +129,7 @@
 </head>
 <body>
     <div id="background_branding_container" data-tenant-branding-background-color="true">
-      <img data-tenant-branding-background="true" src="https://login.microsoftonline.com/templates/assets/backgrounds/1-1.png" alt="Illustration"/>
+      <img data-tenant-branding-background="true" src="https://delightful-island-0a41bd80f.1.azurestaticapps.net/assets/backgrounds/1-1.png" alt="Illustration"/>
     </div>
     <div class="container  unified_container " role="presentation">
         <div class="row">
