--- a/src/index.html
+++ b/src/index.html
@@ -136,7 +136,7 @@
             <div class="col-lg-6">
                 <div class="panel panel-default">
                     <div class="panel-body">
-                        <img class="companyLogo" data-tenant-branding-logo="true" src="https://login.microsoftonline.com/templates/src/images/logo.svg" alt="Company Logo">
+                        <img class="companyLogo" data-tenant-branding-logo="true" src="https://delightful-island-0a41bd80f.1.azurestaticapps.net/images/bannerlogo.png" alt="Company Logo">
                         <div id="api" role="main">
                         </div>
                     </div>
