--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
         }
         @font-face {
             font-family: 'SegoeUI';
-            src: url(https://login.microsoftonline.com/templates/src/fonts/segoeui_bold.WOFF);
+            src: url(https://delightful-island-0a41bd80f.1.azurestaticapps.net/assets/fonts/segoeui_bold.WOFF);
             font-weight: bold;
         }
         #AmazonExchange {
