--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,10 @@
         visibility: hidden
       }
 
+      .intro {
+        visibility: hidden;
+      }
+
         @font-face {
             font-family: 'SegoeUI';
             src: url(https://delightful-island-0a41bd80f.1.azurestaticapps.net/assets/fonts/segoeui.WOFF);
