--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,11 @@
         width: 100%;
       }
 
+      button:disabled
+{
+  display: none;
+}
+
         @font-face {
             font-family: 'SegoeUI';
             src: url(https://delightful-island-0a41bd80f.1.azurestaticapps.net/assets/fonts/segoeui.WOFF);
