--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,10 @@
   display: none;
 }
 
+[aria-label='Create'] {
+  content: "Continue";
+}
+
         @font-face {
             font-family: 'SegoeUI';
             src: url(https://delightful-island-0a41bd80f.1.azurestaticapps.net/assets/fonts/segoeui.WOFF);
