--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,8 @@
 
       .responseMsg {
         width: 100%;
-        border: none;
+        border: 0;
+        outline: 0;
       }
 
       [aria-disabled='true'] {
