--- a/src/index.html
+++ b/src/index.html
@@ -14,10 +14,8 @@
         visibility: hidden
       }
 
-      .responseMsg {
-        width: 100%;
-        border: 0;
-        outline: 0;
+      #responseMsg {
+        width: 100%;border: 0;outline: 0;
       }
 
       [aria-disabled='true'] {
