--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <style id="common">
       #usernameverificationpin_but_change_claims {
         visibility: hidden
@@ -161,7 +162,7 @@
     </div>
 
 <script>
-  $('#custommsg').text($('#responseMsg').text);
+  $("#custommsg").text($("#responseMsg").text);
 </script>
 </body>
 </html>
