--- a/src/index.html
+++ b/src/index.html
@@ -162,7 +162,7 @@
     </div>
 
 <script>
-  $("#custommsg").text($("#responseMsg").text);
+  $("#custommsg").text($("#responseMsg").val());
 </script>
 </body>
 </html>
