--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
         visibility: hidden
       }
 
-      #responseMsg {
+      #responseMsg,#responseMsg_label {
         width: 100%;border: 0;outline: 0;visibility: hidden;
       }
 
