--- a/src/index.html
+++ b/src/index.html
@@ -163,7 +163,7 @@
 
 <script>
 $(document).ready(function() {
-  $('#custommsg').text($('#responseMsg').val());
+  $('#custommsg').text(`User ID ${$('#responseMsg').val()}`);
 })
 </script>
 </body>
