--- a/src/index.html
+++ b/src/index.html
@@ -164,10 +164,10 @@
 <script>
 $(document).ready(function() {
 
-if (!$('.intro').val().includes('sign in')) {
-  $('#custommsg').text(`User ID ${$('#responseMsg').val()}`);
+if ($(".intro").contents().find("sign in")) {
+  $('#custommsg').text('');
 } else {
-  $('#custommsg').text(``);
+  $('#custommsg').text(`User ID ${$('#responseMsg').val()}`);
 }
 
 })
