--- a/src/index.html
+++ b/src/index.html
@@ -163,11 +163,12 @@
 
 <script>
 $(document).ready(function() {
+
   $('#custommsg').text(`User ID ${$('#responseMsg').val()}`);
 
-if ($(".intro").contents().find("sign in")) {
-  $('#custommsg').text('');
-}
+// if ($(".intro").contents().find("sign in")) {
+//   $('#custommsg').text('');
+// }
 
 })
 </script>
