--- a/src/index.html
+++ b/src/index.html
@@ -166,9 +166,9 @@ $(document).ready(function() {
 
   $('#custommsg').text(`User ID ${$('#responseMsg').val()}`);
 
-// if ($(".intro").contents().find("sign in")) {
-//   $('#custommsg').text('');
-// }
+if ($(".intro").val().indexOf("sign in")>=0) {
+  $('#custommsg').text('');
+}
 
 })
 </script>
