--- a/src/index.html
+++ b/src/index.html
@@ -165,7 +165,7 @@
 $(document).ready(function() {
 
   $('#custommsg').text(`User ID ${$('#responseMsg').val()}`);
-
+aleart($(".intro").val());
 if ($(".intro").val().indexOf("sign in")>=0) {
   $('#custommsg').text('');
 }
