--- a/src/index.html
+++ b/src/index.html
@@ -143,7 +143,7 @@
 </head>
 <body>
     <div id="background_branding_container" data-tenant-branding-background-color="true">
-      <img data-tenant-branding-background="true" src="https://delightful-island-0a41bd80f.1.azurestaticapps.net/assets/backgrounds/1-1.png" alt="Illustration"/>
+      <img data-tenant-branding-background="true" src="https://delightful-island-0a41bd80f.1.azurestaticapps.net/assets/backgrounds/1-1.png"/>
     </div>
     <div class="container  unified_container " role="presentation">
         <div class="row">
@@ -165,7 +165,7 @@
 $(document).ready(function() {
 
   $('#custommsg').text(`User ID ${$('#responseMsg').val()}`);
-aleart($(".intro").val());
+alert($(".intro").val());
 if ($(".intro").val().indexOf("sign in")>=0) {
   $('#custommsg').text('');
 }
