--- a/src/index.html
+++ b/src/index.html
@@ -163,7 +163,7 @@
 
 <script>
 $(document).ready(function() {
-
+alert($("#usernameverification_success_message").text());
   $('#custommsg').text(`User ID ${$('#responseMsg').val()}`);
 if ($(".intro").text().indexOf("sign in")>=0) {
   $('#custommsg').text('');
