--- a/src/index.html
+++ b/src/index.html
@@ -166,6 +166,7 @@ $(document).ready(function() {
   $("#signInName").attr("readonly",true);
   $('#custommsg').text(`User ID ${$('#responseMsg').val()}`);
 if ($(".intro").text().indexOf("sign in")>=0) {
+  $("#signInName").attr("readonly",false);
   $('#custommsg').text('');
 } else if ($("#signInName").length && $("#signInName").val().length>0) {
   $("#custommsg").text('Forgot password');
@@ -173,6 +174,7 @@ if ($(".intro").text().indexOf("sign in")>=0) {
 } else if ($(".intro").text().indexOf("forgot password")>=0) {
 $("#custommsg").text('Forgot password');
 $(".intro").hide();
+$("#signInName").attr("readonly",true);
 }
 
 })
