--- a/src/index.html
+++ b/src/index.html
@@ -174,7 +174,7 @@ if ($(".intro").text().indexOf("sign in")>=0) {
 } else if ($(".intro").text().indexOf("forgot password")>=0) {
 $("#custommsg").text('Forgot password');
 $(".intro").hide();
-$("#signInName").attr("readonly",true);
+$("#signInName").attr("readonly",false);
 }
 
 })
