--- a/src/index.html
+++ b/src/index.html
@@ -168,7 +168,7 @@ $(document).ready(function() {
   $('#custommsg').text(`User ID ${$('#responseMsg').val()}`);
   $('#responseMsg,#usernameverificationpin_but_change_claims,#responseDmsmsisdn').hide();
 
-  if ($(".intro").text().indexOf("self reset")>=0) {
+  if ($(".intro").text().indexOf("Self reset")>=0) {
     $('#custommsg').text('');
     $("#signInName").attr("readonly",false);
   }
