--- a/src/index.html
+++ b/src/index.html
@@ -15,9 +15,9 @@
         visibility: hidden
       }
 
-      #responseMsg,#responseMsg_label,#responseDmsmsisdn,#responseDmsmsisdn_label {
+      /* #responseMsg,#responseMsg_label,#responseDmsmsisdn,#responseDmsmsisdn_label {
         width: 100%;border: 0;outline: 0;visibility: hidden;
-      }
+      } */
 
       [aria-disabled='true'] {
   display: none;
