--- a/src/index.html
+++ b/src/index.html
@@ -172,7 +172,7 @@ $(document).ready(function() {
     if ($('#responseMsg').length) {
     $('#custommsg').html(`Self reset password<br>User ID ${$('#responseMsg').val()} [${$('#responseDmsmsisdn').val()}]`);
     }
-    $('#custtommsg').text('');
+    $('#custommsg').text('');
     $("#signInName").attr("readonly",false);
   }
   else if ($(".intro").text().indexOf("sign in")>=0) {
