--- a/src/index.html
+++ b/src/index.html
@@ -195,7 +195,7 @@ if ($('#responseDmsmsisdn').val()=='' && $('#usernameverificationpin_but_send_co
 }
 
 if ($('#responseSendSMS').val().length==0 && ($('#responseDmsprefix').val().substr(0,3)=='601' || $('#responseDmsprefix').val().substr(0,2)=='01')) {
-
+alert("test"+$('#responseSendSMS').val()+"test")
 } else {
   $('#userverificationpin_but_send_code').hide();
 }
