--- a/src/index.html
+++ b/src/index.html
@@ -177,6 +177,7 @@ $(document).ready(function() {
     }
     //$('#intro').text('');
     $("#signInName").attr("readonly",false);
+    $(".intro").hide();
   }
   else if ($(".intro").text().indexOf("sign in")>=0) {
   $("#signInName").attr("readonly",false);
