--- a/src/index.html
+++ b/src/index.html
@@ -215,6 +215,11 @@ if ($('#claimVerificationServerError').text().indexOf('Error')>=0) {
 }
 });
 
+$('#usernameverificationpin_but_send_new_code').hide();
+setTimeout(function(){
+  $('#usernameverificationpin_but_send_new_code').show();
+},10000);
+
 })
 </script>
 </body>
