--- a/src/index.html
+++ b/src/index.html
@@ -215,10 +215,12 @@ if ($('#claimVerificationServerError').text().indexOf('Error')>=0) {
 }
 });
 
-$('#usernameverificationpin_but_send_new_code').hide();
-setTimeout(function(){
+$('#usernameverificationpin_but_send_new_code').on('click',function(){
+  $('#usernameverificationpin_but_send_new_code').hide();
+  setTimeout(function(){
   $('#usernameverificationpin_but_send_new_code').show();
 },10000);
+});
 
 })
 </script>
