--- a/src/index.html
+++ b/src/index.html
@@ -224,13 +224,13 @@ $('#usernameverificationpin_but_send_new_code').hide();
 //   $('#usernameverificationpin_but_send_new_code').show();
 // },10000);
 // });
-//1113
+//1114
 
 })
 
 function onclicksendnewcode() {
 $('#retryCodeText').prop('disabled',true);
-$('#retryCodeText').val('...');
+$('#retryCodeText').text('...');
 $('#usernameverificationpin_but_send_new_code').click(function(){
 $('#usernameverificationpin_but_send_new_code').hide();
   setTimeout(function(){
@@ -238,7 +238,7 @@ $('#usernameverificationpin_but_send_new_code').hide();
 },20);
 setTimeout(function(){
   $('#retryCodeText').prop('disabled',false);
-  $('#retryCodeText').val('get new code');
+  $('#retryCodeText').text('get new code');
   $('#usernameverificationpin_but_send_new_code').hide();
 },20000);
 })
