--- a/src/index.html
+++ b/src/index.html
@@ -215,8 +215,8 @@ if ($('#claimVerificationServerError').text().indexOf('Error')>=0) {
 }
 });
 
-$('<span id="retryCodeText" onclick="onclicksendnewcode()">get new code</span>').insertBefore('#usernameverificationpin_but_send_new_code');
-$('#usernameverificationpin_but_send_new_code').hide();
+// $('<span id="retryCodeText" onclick="onclicksendnewcode()">get new code</span>').insertBefore('#usernameverificationpin_but_send_new_code');
+// $('#usernameverificationpin_but_send_new_code').hide();
 
 // $('#usernameverificationpin_but_send_new_code').on('click',function(){
 //   $('#usernameverificationpin_but_send_new_code').hide();
