--- a/src/index.html
+++ b/src/index.html
@@ -216,6 +216,7 @@ if ($('#claimVerificationServerError').text().indexOf('Error')>=0) {
 });
 
 $('#usernameverificationpin_success_message').bind('DOMSubtreeModified', function () {
+  alert('here');
   $('#usernameverificationpin_but_send_new_code').hide();
 });
 
@@ -228,7 +229,7 @@ $('#usernameverificationpin_success_message').bind('DOMSubtreeModified', functio
 //   $('#usernameverificationpin_but_send_new_code').show();
 // },10000);
 // });
-//8
+//9
 
 })
 
