--- a/src/index.html
+++ b/src/index.html
@@ -216,7 +216,7 @@ if ($('#claimVerificationServerError').text().indexOf('Error')>=0) {
 });
 
 $('#usernameverificationpin_success_message').bind('DOMSubtreeModified', function () {
-  $('.sendNewCode').hide();
+  $('.sendNewCode').prop('disabled',true);
 });
 
 // $('<span id="retryCodeText" onclick="onclicksendnewcode()">get new code</span>').insertBefore('#usernameverificationpin_but_send_new_code');
@@ -228,7 +228,7 @@ $('#usernameverificationpin_success_message').bind('DOMSubtreeModified', functio
 //   $('#usernameverificationpin_but_send_new_code').show();
 // },10000);
 // });
-//10
+//11
 
 })
 
