--- a/src/index.html
+++ b/src/index.html
@@ -216,7 +216,9 @@ if ($('#claimVerificationServerError').text().indexOf('Error')>=0) {
 });
 
 $('#usernameverificationpin_success_message').bind('DOMSubtreeModified', function () {
-  $('.sendNewCode').prop('disabled',true);
+  setTimeout(function(){
+  $('#usernameverificationpin_but_send_new_code').hide();
+},2000);
 });
 
 // $('<span id="retryCodeText" onclick="onclicksendnewcode()">get new code</span>').insertBefore('#usernameverificationpin_but_send_new_code');
@@ -228,7 +230,7 @@ $('#usernameverificationpin_success_message').bind('DOMSubtreeModified', functio
 //   $('#usernameverificationpin_but_send_new_code').show();
 // },10000);
 // });
-//11
+//12
 
 })
 
