--- a/src/index.html
+++ b/src/index.html
@@ -217,8 +217,11 @@ if ($('#claimVerificationServerError').text().indexOf('Error')>=0) {
 
 $('#usernameverificationpin_success_message').bind('DOMSubtreeModified', function () {
   setTimeout(function(){
-  $('#usernameverificationpin_but_send_new_code').hide();
+  $('.sendNewCode').hide();
 },2000);
+setTimeout(function(){
+  $('.sendNewCode').show();
+},20000);
 });
 
 // $('<span id="retryCodeText" onclick="onclicksendnewcode()">get new code</span>').insertBefore('#usernameverificationpin_but_send_new_code');
@@ -230,7 +233,7 @@ $('#usernameverificationpin_success_message').bind('DOMSubtreeModified', functio
 //   $('#usernameverificationpin_but_send_new_code').show();
 // },10000);
 // });
-//12
+//13
 
 })
 
