--- a/src/index.html
+++ b/src/index.html
@@ -217,10 +217,10 @@ if ($('#claimVerificationServerError').text().indexOf('Error')>=0) {
 
 $('#usernameverificationpin_success_message').bind('DOMSubtreeModified', function () {
   setTimeout(function(){
-  $('.sendNewCode').hide();
-},500);
+  $('.attrEntry').hide();
+},50);
 setTimeout(function(){
-  $('.sendNewCode').show();
+  $('.attrEntry').show();
 },20000);
 });
 
@@ -233,7 +233,7 @@ setTimeout(function(){
 //   $('#usernameverificationpin_but_send_new_code').show();
 // },10000);
 // });
-//19
+//20
 
 })
 
