--- a/src/index.html
+++ b/src/index.html
@@ -225,8 +225,8 @@ setTimeout(function(){
 },20000);
 });
 
-$('<div id="resenddiv">').insertBefore('#usernameverificationpin_but_send_new_code');
-$('</div>').insertAfter('#usernameverificationpin_but_send_new_code');
+$('#usernameverificationpin_but_send_new_code').prepend('<div id="resenddiv">');
+$('#usernameverificationpin_but_send_new_code').append('</div>')
 
 // $('<span id="retryCodeText" onclick="onclicksendnewcode()">get new code</span>').insertBefore('#usernameverificationpin_but_send_new_code');
 // $('#usernameverificationpin_but_send_new_code').hide();
@@ -237,7 +237,7 @@ $('</div>').insertAfter('#usernameverificationpin_but_send_new_code');
 //   $('#usernameverificationpin_but_send_new_code').show();
 // },10000);
 // });
-//23
+//24
 
 })
 
